# nlp-classifier-automl

./: .gitignore  FIDELITY_CORRELATION_README.md  LICENSE  README.md  correlation-data-fracs.py  fidelity_correlation_analysis.py  fidelity_correlation_viz.py  hpo.py  hpo_importance.py  hpo_viz.py  hpo_with_fidelity_tracking.py  job.sh  neps_slurm.py  neps_wandb_logger.py  optimize.py  pyproject.toml  read_npy.py  run.py  run_bo_confs_for_low_fidelity.py  scaling_top_trials.py  test_approaches.py  top5.csv  wandb_log.py
asha/: evaluate-asha.py  test_asha.py
automl/: __init__.py  core.py  da.py  datasets.py  models.py  normalization.py  utils.py
configs/: train.yaml
configs/model_config/: big.yaml  medium.yaml  small.yaml
configs/neps/: lstm-bo.yaml  lstm.yaml  transformer.yaml
utils/: analyze_fidelity_correlation.py  hpo_importance.py  hpo_viz.py  hpo_with_fidelity_tracking.py  read_npy.py  run_bo_confs_for_low_fidelity.py  scaling_top_trials.py  test.py  top_eval_all_datasets.py
