[tool.poetry]
name = "automl"
version = "0.1.0"
description = "SS25 AutoML - Text"
authors = [
    "SS25 AutoML Orga <automl-lecture-orga25@cs.uni-freiburg.de>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "automl" },
]

[tool.poetry.dependencies]
python = ">=3.10"
# Poetry insists on this https://github.com/python-poetry/poetry/issues/8823
numpy = "^1.0"  # to prevent 2.0 from being installed
toml = "^0.10.2"
scikit-learn = "^1.3"    # ML utilities  
ipython = "^8.0"         # Interactive Python
pyyaml = "^6.0"          # YAML parsing
pyarrow = ">=12.0"       # Arrow format support
neural-pipeline-search = "0.13.0"
datasets = ">=2.0"
transformers =  ">=4.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"