[tool.poetry]
name = "automl"
version = "0.1.0"
description = "MTL NLP Classifier"
authors = [
    "Nastaran Alipour <nastaran.alipour78@gmail.com>",
    "Waasiq Masood <waasiqmasood@gmail.com>",
]

license = "MIT"
readme = "README.md"
packages = [
    { include = "automl" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Poetry insists on this https://github.com/python-poetry/poetry/issues/8823
numpy = "1.26.4"  # to prevent 2.0 from being installed
toml = "0.10.2"
scikit-learn = "1.7.0"    # ML utilities  
ipython = "8.37.0"         # Interactive Python
pyyaml = "6.0.2"          # YAML parsing
pyarrow = "20.0.0"       # Arrow format support
neural-pipeline-search = "0.13.0"
datasets = "4.0.0"
transformers =  "4.53.2"
muon-optimizer = {git = "https://github.com/KellerJordan/Muon", rev = "f90a42b28e00b8d9d2d05865fe90d9f39abcbcbd"}
wandb = "0.21.0"
hydra-core = "1.3.2"
absl-py = "2.3.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
alembic = "1.16.4"
anndata = "0.11.4"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
array-api-compat = "1.12.0"
asttokens = "3.0.0"
async-timeout = "5.0.1"
attrs = "25.3.0"
beautifulsoup4 = "4.13.4"
bleach = "6.2.0"
botorch = "0.12.0"
bs4 = "0.0.2"
certifi = "2025.7.9"
charset-normalizer = "3.4.2"
click = "8.2.1"
cloudpickle = "3.1.1"
colorlog = "6.9.0"
contourpy = "1.3.2"
cycler = "0.12.1"
decorator = "5.2.1"
dill = "0.3.8"
exceptiongroup = "1.3.0"
executing = "2.2.0"
filelock = "3.18.0"
fonttools = "4.58.5"
frozenlist = "1.7.0"
fsspec = "2025.3.0"
gitdb = "4.0.12"
gitpython = "3.1.45"
gpytorch = "1.13"
greenlet = "3.2.3"
grpcio = "1.73.1"
h5py = "3.14.0"
hf-xet = "1.1.5"
huggingface-hub = "0.33.4"
idna = "3.10"
ifbo = "0.3.11"
jaxtyping = "0.2.19"
jedi = "0.19.2"
jinja2 = "3.1.6"
joblib = "1.5.1"
kaggle = "1.7.4.5"
kiwisolver = "1.4.8"
legacy-api-wrap = "1.4.1"
linear-operator = "0.5.3"
llvmlite = "0.44.0"
mako = "1.3.10"
markdown = "3.8.2"
markupsafe = "3.0.2"
matplotlib = "3.10.3"
matplotlib-inline = "0.1.7"
more-itertools = "10.7.0"
mpmath = "1.3.0"
mudata = "0.3.2"
multidict = "6.6.3"
multipledispatch = "1.0.0"
multiprocess = "0.70.16"
natsort = "8.4.0"
networkx = "2.8.8"
numba = "0.61.2"
nvidia-cublas-cu12 = "12.6.4.1"
nvidia-cuda-cupti-cu12 = "12.6.80"
nvidia-cuda-nvrtc-cu12 = "12.6.77"
nvidia-cuda-runtime-cu12 = "12.6.77"
nvidia-cudnn-cu12 = "9.5.1.17"
nvidia-cufft-cu12 = "11.3.0.4"
nvidia-cufile-cu12 = "1.11.1.6"
nvidia-curand-cu12 = "10.3.7.77"
nvidia-cusolver-cu12 = "11.7.1.2"
nvidia-cusparse-cu12 = "12.5.4.2"
nvidia-cusparselt-cu12 = "0.6.3"
nvidia-nccl-cu12 = "2.26.2"
nvidia-nvjitlink-cu12 = "12.6.85"
nvidia-nvtx-cu12 = "12.6.77"
omegaconf = "2.3.0"
opt-einsum = "3.4.0"
optuna = "4.4.0"
packaging = "25.0"
pandas = "2.3.1"
parso = "0.8.4"
patsy = "1.0.1"
pexpect = "4.9.0"
pillow = "11.3.0"
platformdirs = "4.3.8"
portalocker = "2.10.1"
prompt-toolkit = "3.0.51"
propcache = "0.3.2"
protobuf = "6.31.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
pygments = "2.19.2"
pynndescent = "0.5.13"
pyparsing = "3.2.3"
pyro-api = "0.1.2"
pyro-ppl = "1.9.1"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pytz = "2025.2"
regex = "2024.11.6"
requests = "2.32.4"
safetensors = "0.5.3"
scanpy = "1.11.4"
scipy = "1.15.3"
seaborn = "0.13.2"
sentry-sdk = "2.33.2"
session-info2 = "0.2"
six = "1.17.0"
smmap = "5.0.2"
soupsieve = "2.7"
sqlalchemy = "2.0.41"
stack-data = "0.6.3"
statsmodels = "0.14.5"
submitit = "1.5.3"
sympy = "1.14.0"
tensorboard = "2.19.0"
tensorboard-data-server = "0.7.2"
text-unidecode = "1.3"
threadpoolctl = "3.6.0"
tokenizers = "0.21.2"
tomli = "2.2.1"
torch = "2.7.1"
torchvision = "0.22.1"
tqdm = "4.67.1"
traitlets = "5.14.3"
triton = "3.3.1"
typeguard = "4.4.4"
typing-inspection = "0.4.1"
typing-extensions = "4.14.1"
tzdata = "2025.2"
umap-learn = "0.5.9.post2"
urllib3 = "2.5.0"
wcwidth = "0.2.13"
webencodings = "0.5.1"
werkzeug = "3.1.3"
xxhash = "3.5.0"
yarl = "1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"